adds css dir and style to the webpages

--- a/about-us.html
+++ b/about-us.html
@@ -2,17 +2,18 @@
 
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
     <title>Cupcake City</title>
   </head>
 
   <body>
     <a href="index.html">Home</a>
     <h1>Cupcake City</h1>
-          <img src="img/img1.jpg"alt="A photo of assorted cup cakes">
-    <h4>Everybody loves cake</h4>
+    <h4 class="flashy">Everybody loves cake</h4>
+          <img class="best" src="img/img1.jpg"alt="A photo of assorted cup cakes" >
 
-    <h2>About Us</h2>
+
+    <h2 class="flashy">About Us</h2>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in nulla eu ipsum condimentum tristique.
       Sed vel massa vitae dui suscipit auctor. Maecenas nulla tortor, fringilla vel dui eu, congue gravida dui.
