--- a/contacts.html
+++ b/contacts.html
@@ -2,18 +2,18 @@
 
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
     <title>Cupcake City</title>
   </head>
 
   <body>
     <a href="index.html">Home</a>
     <h1>Cupcake City</h1>
-    <h4>Everybody loves cake</h4>
-    <h2>Contact us</h2>
+    <h4 class="flashy">Everybody loves cake</h4>
+    <h2 class="flashy">Contact us</h2>
     <p>Email:<a href="mailto:info@cupcakecity.co.ke">info@cupcakecity.co.ke</a>
     <P>or call
-      <ul>
+      <ul class="flashy">
         <li>Tel: 07222727292</li>
         <li>Tel: 0733727292</li>
         <li>Tel: (022)-493650</li>
