--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
     <title>Cupcake City</title>
   </head>
 
   <body>
     <h1>Cupcake City</h1>
-      <img src="img/img1.jpg"alt="A photo of assorted cup cakes">
-    <h4>Everybody loves cake</h4>
-      <ul>
+    <h4 class="flashy">Everybody loves cake</h4>
+      <img class="best" src="img/img1.jpg" alt="A photo of assorted cup cakes" >
+
+      <ul class="flashy">
         <li><a href="about-us.html"><strong>About Us</strong></a></li>
         <li><a href="gallery.html"><strong>gallery</strong></a></li>
         <li><a href="contacts.html"><strong>contact us</strong></a></li>
