--- a/gallery.html
+++ b/gallery.html
@@ -2,20 +2,20 @@
 
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
     <title>Cupcake City</title>
   </head>
 
   <body>
     <a href="index.html">Home</a>
     <h1>Cupcake City</h1>
-    <h4>Everybody loves cake</h4>
+    <h4 class="flashy">Everybody loves cake</h4>
 
-    <h2>Gallery</h2>
+    <h2 class="flashy">Gallery</h2>
       <ul>
-        <li><img src="img/gallery1.jpg"alt="A photo of cupcakes"></li>
+        <li><img class="best" src="img/gallery1.jpg"alt="A photo of cupcakes"></li>
         <li><img src="img/gallery2.jpg"alt="A photo of cupcakes"></li>
-        <li><img src="img/gallery3.jpg"alt="A photo of cupcakes"></li>
+        <li><img class="best" src="img/gallery3.jpg"alt="A photo of cupcakes"></li>
         <li><img src="img/gallery4.jpg"alt="A photo of cupcakes"></li>
       </ul>
 </body>
